--- a/SiteCurriculo/public/html/cadastro.html
+++ b/SiteCurriculo/public/html/cadastro.html
@@ -10,7 +10,6 @@
     <div class="container">
         <form id="cadastroForm" action="/cadastro" method="post">
             <h1>Cadastro</h1>
-            <div id="error-message" style="display: none; color: red;"></div>
             <div class="input-box">
                 <input type="email" name="email" placeholder="Email" required />
             </div>
@@ -34,10 +33,14 @@
             <div class="input-box">
                 <input type="password" name="password" placeholder="Senha" required />
             </div>
+
+            <div id="error-message" style="display: none; color: red; padding: 10px; background-color: #f9f9f9; border-radius: 5px; margin-bottom: 10px;">
+                Nome de usuário ou senha incorretos!
+            </div>
       
             <button type="submit" class="btn">Sign In</button>
         </form>
     </div>
-    <script src="database/cadastro.js"></script>
+    <script src="../js/cadastro.js"></script>
 </body>
 </html>
