--- a/SiteCurriculo/telas/cadastro.html
+++ b/SiteCurriculo/telas/cadastro.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
-    <link rel="stylesheet" href="../SiteCurriculo/public/css/login.css">
+    <link rel="stylesheet" href="./css/login.css">
 </head>
 <body>
     <div class="container">
         <form id="cadastroForm" action="/cadastro" method="post">
             <h1>Cadastro</h1>
-            <div id="error-message" style="display: none; color: red;"></div>
             <div class="input-box">
                 <input type="email" name="email" placeholder="Email" required />
             </div>
@@ -34,11 +33,13 @@
             <div class="input-box">
                 <input type="password" name="password" placeholder="Senha" required />
             </div>
+
+            <div id="error-message" style="display: none; color: red; padding: 10px; background-color: #f9f9f9; border-radius: 5px; margin-bottom: 10px;">
+            </div>
       
             <button type="submit" class="btn">Sign In</button>
-            <a href="../SiteCurriculo/telas/perfil.html"></a>
         </form>
     </div>
-    <script src="database/cadastro.js"></script>
+    <script src="js/cadastro.js"></script>
 </body>
 </html>
