--- a/SiteCurriculo/telas/login.html
+++ b/SiteCurriculo/telas/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login page</title>
+    <title>Página de login</title>
     <link rel="stylesheet" href="css/login.css" />
   </head>
   <body>
@@ -18,11 +18,7 @@
         <div class="input-box">
           <input type="password" name="password" placeholder="Senha" required />
         </div>
-
-        <div class="remember-forgot">
-          <label><input type="checkbox" /> Remember me</label>
-          <a href="#">Forgot password?</a>
-        </div>        
+  
 
         <div id="error-message" style="display: none; color: red; padding: 10px; background-color: #f9f9f9; border-radius: 5px; margin-bottom: 10px;">
           Nome de usuário ou senha incorretos!
@@ -31,7 +27,7 @@
         <button type="submit" class="btn">Login</button>
 
         <div class="register-link">
-          <p>Don't have an account? <a href="/tipo-cadastro">Register here!</a></p>
+          <p>Não tem uma conta? <a href="/tipo-cadastro">Faça uma!</a></p>
         </div>
       </form>      
     </div>
