--- a/SiteCurriculo/telas/login.html
+++ b/SiteCurriculo/telas/login.html
@@ -12,7 +12,7 @@
         <h1>Login</h1>
       <!-- Div de erro -->
         <div class="input-box">
-          <input type="text" name="username" placeholder="Nome de usuário" required />
+          <input type="text" name="username" placeholder="Email" required />
         </div>
         
         <div class="input-box">
@@ -21,7 +21,7 @@
   
 
         <div id="error-message" style="display: none; color: red; padding: 10px; background-color: #f9f9f9; border-radius: 5px; margin-bottom: 10px;">
-          Nome de usuário ou senha incorretos!
+          Email ou senha incorretos!
         </div>
 
         <button type="submit" class="btn">Login</button>
